--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
 .grid-container {
@@ -21,10 +22,12 @@
   align-items: center;
   justify-content: flex-start;
   grid-area: nav;
+  background-color: #D7F3F7;
+  overflow: hidden;
 }
 
 .nav-link {
-  color: white;
+  
   font-style: initial;
   font-weight: bold;
 }
@@ -42,21 +45,121 @@
   height: 55px;
 }
 
+.mundo {
+  display: none;
+  width: 250px;
+  height: 250px;
+  background-image: url(../imgs/mundo-300.png);
+  background-size: cover;
+  position: absolute ;
+  bottom: -125px;
+  z-index: 1;
+  animation: mundo 30s linear infinite;
+}
 main {
   grid-area: main;
   background-color: white;
+  padding: 50px;
 }
+.cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+/**/
+
+ .flip {
+	 position: relative;
+     display: inline-block;
+	 margin-right: 2px;
+	 margin-bottom: 1em;
+	 min-width: 300px;
+}
+ .flip > .front, .flip > .back {
+	 display: block;
+	 transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	 transition-duration: 0.5s;
+	 transition-property: transform, opacity;
+	 color: white;
+	 width: inherit;
+	 background-size: cover !important;
+	 background-position: center !important;
+	 height: 220px;
+	 padding: 1em 2em;
+	 background: #313131;
+	 border-radius: 10px;
+}
+ .flip > .front {
+	 transform: rotateY(0deg);
+}
+.flip .front.tokyo {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+.flip .front.osaka {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+.flip .front.nara {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+.flip .front.hiroshima {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+.flip .front.kyoto {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+.flip .front.hakone {
+    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+}
+ .flip > .back {
+	 position: absolute;
+	 opacity: 0;
+	 top: 0px;
+	 left: 0px;
+	 width: 100%;
+	 height: 100%;
+	 transform: rotateY(-180deg);
+}
+ .flip:hover > .front {
+	 transform: rotateY(180deg);
+}
+ .flip:hover > .back {
+	 opacity: 1;
+	 transform: rotateY(0deg);
+}
+ .flip > .front p, .flip > .back p {
+	 font-size: 0.9125rem;
+	 line-height: 160%;
+	 color: #999;
+}
+ .text-shadow {
+	 text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
+}
+ /**/
+
 
 footer {
   grid-area: footer;
   display: flex;
-  background-color: #210546;
+  background-color: #2b5a61;
   text-align: center;
   align-items: center;
   justify-content: space-around;
   color: white;
   font-size: 1rem;
-  padding-top: 1.5%;
+  z-index: 2;
+  flex-direction: column;
+}
+
+@keyframes mundo {
+0% {
+  transform: rotate(0deg);
+    }
+50% {
+    transform: rotate(180deg);
+}
+100% {
+  transform: rotate(360deg);
+    }
 }
 /*Tablet*/
 @media (min-width: 576px) {
@@ -71,9 +174,8 @@ footer {
     grid-template-rows: auto 0.1fr;
     height: 100vh;
   }
-  main {
-    overflow-y: scroll;
-  }
+  
+
   .nav {
     align-items: start;
     justify-content: center;
@@ -82,5 +184,20 @@ footer {
   .navbar-expand-lg .navbar-nav {
     flex-direction: column;
   }
-  
+  .mundo {
+    display: block;
+  }
+  main {
+    overflow-y: scroll;
+  }
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+ }
+  .flip {
+    width: 400px;
+  }
+  footer {
+    flex-direction: row;
+  }
 }
