--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
   box-sizing: border-box;
+}
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
 }
 
 .grid-container {
@@ -26,6 +29,15 @@
   overflow: hidden;
 }
 
+.company{
+  font-weight: bold;
+  font-size: 40px;
+  padding: 2rem 0;
+  
+}
+.company span {
+  color: #eca41e;
+}
 .nav-link {
   
   font-style: initial;
@@ -56,6 +68,10 @@
   z-index: 1;
   animation: mundo 30s linear infinite;
 }
+
+h1 {
+  font-size: 40px;
+}
 main {
   grid-area: main;
   background-color: white;
@@ -64,15 +80,21 @@ main {
 .cards {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
+}
+
+.filter {
+  margin: 30px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
 }
 /**/
 
  .flip {
 	 position: relative;
-     display: inline-block;
-	 margin-right: 2px;
-	 margin-bottom: 1em;
+  display: inline-block;
+	 margin-bottom: 2rem;
 	 min-width: 300px;
 }
  .flip > .front, .flip > .back {
@@ -85,30 +107,41 @@ main {
 	 background-size: cover !important;
 	 background-position: center !important;
 	 height: 220px;
-	 padding: 1em 2em;
+   width: 100%;
 	 background: #313131;
-	 border-radius: 10px;
 }
  .flip > .front {
 	 transform: rotateY(0deg);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.flip .front h3 {
+  width: 80%;
+  margin: 0px;
+  text-align: center;
+  background-color: rgba(6, 71, 86, 0.65);
+  padding: 10px;
+  font-weight: 700;
+  text-shadow: none;
 }
 .flip .front.tokyo {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+  background-image: url(../imgs/tokyo.jpg);
 }
 .flip .front.osaka {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+    background-image: url(../imgs/osaka.jpg)
 }
 .flip .front.nara {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+    background-image: url(../imgs/nara.jpg)
 }
 .flip .front.hiroshima {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+    background-image: url(../imgs/hiroshima.jpg)
 }
 .flip .front.kyoto {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+    background-image: url(../imgs/kyoto.jpg)
 }
 .flip .front.hakone {
-    background-image: url(https://images.pexels.com/photos/34546/sunset-lake-landscape-summer.jpg?w=1260&h=750&dpr=2&auto=compress&cs=tinysrgb)
+    background-image: url(../imgs/hakone.jpg)
 }
  .flip > .back {
 	 position: absolute;
@@ -118,6 +151,7 @@ main {
 	 width: 100%;
 	 height: 100%;
 	 transform: rotateY(-180deg);
+   padding: 1.5em;
 }
  .flip:hover > .front {
 	 transform: rotateY(180deg);
@@ -136,18 +170,124 @@ main {
 }
  /**/
 
-
-footer {
+ .footer{
+	background: #31869b;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	padding: 10px 50px;
   grid-area: footer;
-  display: flex;
-  background-color: #2b5a61;
-  text-align: center;
-  align-items: center;
-  justify-content: space-around;
+}
+
+
+.footer .footer-left,
+.footer .footer-center,
+.footer .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* Footer left */
+
+.footer .footer-left{
+	width: 40%;
+  
+}
+
+/* The company logo */
+
+.footer h4{
+	color:  #ffffff;
+	font: normal 36px;
+	margin: 0;
+}
+
+.footer h4 span{
+	color:  #eca41e;
+}
+
+.footer p {
   color: white;
-  font-size: 1rem;
-  z-index: 2;
-  flex-direction: column;
+  font-size: 14px;
+}
+
+/* Footer Center */
+
+.footer .footer-center{
+	width: 35%;
+}
+
+.footer .footer-center i{
+	background-color:  #eca41e;
+	color: #ffffff;
+	font-size: 25px;
+	width: 38px;
+	height: 38px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 42px;
+	margin: 10px 15px;
+	vertical-align: middle;
+}
+
+.footer .footer-center i.fa-envelope{
+	font-size: 17px;
+	line-height: 38px;
+}
+
+.footer .footer-center i.fa-phone{
+  font-size: 22px;
+ 
+}
+
+.footer .footer-center p{
+	display: inline-block;
+	color: #ffffff;
+  font-weight:400;
+	vertical-align: middle;
+	margin:0;
+}
+
+.footer .footer-center p span{
+	display:block;
+	font-weight: normal;
+	font-size:14px;
+	line-height:2;
+}
+
+.footer .footer-center p a{
+	color:  white;
+	text-decoration: none;;
+}
+
+
+
+/* Footer Right */
+
+.footer .footer-right{
+	width: 20%;
+}
+
+.footer .footer-icons{
+	margin-top: 25px;
+}
+
+.footer .footer-icons a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	cursor: pointer;
+	background-color:  #eca41e;
+	border-radius: 2px;
+
+	font-size: 20px;
+	color: #ffffff;
+	text-align: center;
+	line-height: 35px;
+
+	margin-right: 3px;
+	margin-bottom: 3px;
 }
 
 @keyframes mundo {
@@ -195,7 +335,7 @@ footer {
     flex-wrap: wrap;
  }
   .flip {
-    width: 400px;
+    width: 32%;
   }
   footer {
     flex-direction: row;
