--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,18 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
+  padding: 0;
 }
 
 .grid-container {
   display: grid;
-  gap: 0.1rem;
+  /*gap: 0.1rem;*/
   grid-template-areas:
     "nav"
     "main"
     "footer";
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto 0.5fr;
+  grid-template-rows: 0.45fr auto 0.5fr;
 }
 
 .nav {
@@ -25,27 +26,33 @@ body {
   align-items: center;
   justify-content: flex-start;
   grid-area: nav;
-  background-color: #D7F3F7;
+  background-color: #d7f3f7;
   overflow: hidden;
 }
 
-.company{
+.company {
   font-weight: bold;
-  font-size: 40px;
-  padding: 2rem 0;
-  
+  font-size: 30px;
+  margin: 0;
+  color: #003d4b;
 }
 .company span {
   color: #eca41e;
 }
+
+.nav-item {
+  display: block;
+  font-size: 1.2rem;
+}
+
 .nav-link {
-  
+  color: #035164;
   font-style: initial;
   font-weight: bold;
 }
 .nav-link:hover,
 .navbar-nav .nav-link.active {
-  color: #bd4cda;
+  color: #eca41e;
 }
 
 .navbar .container-fluid,
@@ -63,24 +70,37 @@ body {
   height: 250px;
   background-image: url(../imgs/mundo-300.png);
   background-size: cover;
-  position: absolute ;
+  position: absolute;
   bottom: -125px;
   z-index: 1;
   animation: mundo 30s linear infinite;
 }
 
+.intro {
+  margin-bottom: 3rem;
+}
 h1 {
-  font-size: 40px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 2rem 0;
+  color: #035164;
+}
+h2 {
+  padding: 1.5rem 0;
+  font-size: 1.8rem;
+  color: #035164;
+  font-weight: 600;
 }
 main {
   grid-area: main;
   background-color: white;
-  padding: 50px;
+  padding: 25px;
 }
 .cards {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .filter {
@@ -91,30 +111,30 @@ main {
 }
 /**/
 
- .flip {
-	 position: relative;
+.flip {
+  position: relative;
   display: inline-block;
-	 margin-bottom: 2rem;
-	 min-width: 300px;
+  margin-bottom: 2rem;
+  min-width: 300px;
 }
- .flip > .front, .flip > .back {
-	 display: block;
-	 transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-	 transition-duration: 0.5s;
-	 transition-property: transform, opacity;
-	 color: white;
-	 width: inherit;
-	 background-size: cover !important;
-	 background-position: center !important;
-	 height: 220px;
-   width: 100%;
-	 background: #313131;
+.flip > .front,
+.flip > .back {
+  display: block;
+  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition-duration: 0.5s;
+  transition-property: transform, opacity;
+  color: white;
+  background-size: cover !important;
+  background-position: center !important;
+  min-height: 300px;
+  width: 100%;
+  background: #035164;
 }
- .flip > .front {
-	 transform: rotateY(0deg);
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.flip > .front {
+  transform: rotateY(0deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .flip .front h3 {
   width: 80%;
@@ -129,177 +149,193 @@ main {
   background-image: url(../imgs/tokyo.jpg);
 }
 .flip .front.osaka {
-    background-image: url(../imgs/osaka.jpg)
+  background-image: url(../imgs/osaka.jpg);
 }
 .flip .front.nara {
-    background-image: url(../imgs/nara.jpg)
+  background-image: url(../imgs/nara.jpg);
 }
 .flip .front.hiroshima {
-    background-image: url(../imgs/hiroshima.jpg)
+  background-image: url(../imgs/hiroshima.jpg);
 }
 .flip .front.kyoto {
-    background-image: url(../imgs/kyoto.jpg)
+  background-image: url(../imgs/kyoto.jpg);
 }
 .flip .front.hakone {
-    background-image: url(../imgs/hakone.jpg)
+  background-image: url(../imgs/hakone.jpg);
 }
- .flip > .back {
-	 position: absolute;
-	 opacity: 0;
-	 top: 0px;
-	 left: 0px;
-	 width: 100%;
-	 height: 100%;
-	 transform: rotateY(-180deg);
-   padding: 1.5em;
+.flip > .back {
+  position: absolute;
+  opacity: 0;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(-180deg);
+  padding: 1.5em;
 }
- .flip:hover > .front {
-	 transform: rotateY(180deg);
+.flip:hover > .front {
+  transform: rotateY(180deg);
 }
- .flip:hover > .back {
-	 opacity: 1;
-	 transform: rotateY(0deg);
+.flip:hover > .back {
+  opacity: 1;
+  transform: rotateY(0deg);
 }
- .flip > .front p, .flip > .back p {
-	 font-size: 0.9125rem;
-	 line-height: 160%;
-	 color: #999;
+.flip > .front p,
+.flip > .back p {
+  font-size: 0.9125rem;
+  line-height: 160%;
+  color: #eaeaea;
 }
- .text-shadow {
-	 text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
+.btn {
+  background-color: #eca41e;
+  color: #ffffff;
+  border-radius: 5px;
 }
- /**/
+.btn:hover {
+  background-color: #d7f3f7;
+  color: #035164;
+}
+/**/
 
- .footer{
-	background: #31869b;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	padding: 10px 50px;
+ol {
+  margin: 2rem 0;
+}
+
+.form-control {
+  color: #035164;
+}
+/*presupuesto*/
+.ciudades {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+.ciudad {
+  background: #f8f8f8;
+  width: 100%;
+  padding: 1rem;
+}
+.ciudad h3 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #035164;
+}
+/*footer*/
+.footer {
+  background: #31869b;
+  width: 100%;
+  text-align: left;
+  padding: 15px 50px;
   grid-area: footer;
+  display: flex;
+  flex-direction: column;
 }
-
-
 .footer .footer-left,
 .footer .footer-center,
-.footer .footer-right{
-	display: inline-block;
-	vertical-align: top;
+.footer .footer-right {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
 }
 
 /* Footer left */
 
-.footer .footer-left{
-	width: 40%;
-  
+.footer h4 {
+  color: #ffffff;
+  font-size: 2rem;
+  margin: 1rem 0;
 }
 
-/* The company logo */
-
-.footer h4{
-	color:  #ffffff;
-	font: normal 36px;
-	margin: 0;
-}
-
-.footer h4 span{
-	color:  #eca41e;
+.footer h4 span {
+  color: #eca41e;
 }
 
 .footer p {
   color: white;
   font-size: 14px;
+  margin: 5px 0;
 }
 
 /* Footer Center */
 
-.footer .footer-center{
-	width: 35%;
+.footer .footer-center i {
+  background-color: #eca41e;
+  color: #ffffff;
+  font-size: 25px;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 42px;
+  vertical-align: middle;
+  margin: 5px 0;
 }
 
-.footer .footer-center i{
-	background-color:  #eca41e;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
+.footer .footer-center i.fa-envelope {
+  font-size: 17px;
+  line-height: 38px;
 }
 
-.footer .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
-}
-
-.footer .footer-center i.fa-phone{
+.footer .footer-center i.fa-phone {
   font-size: 22px;
- 
 }
 
-.footer .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-  font-weight:400;
-	vertical-align: middle;
-	margin:0;
+.footer .footer-center p {
+  display: inline-block;
+  color: #ffffff;
+  font-weight: 400;
+  vertical-align: middle;
+  margin: 0;
 }
 
-.footer .footer-center p span{
-	display:block;
-	font-weight: normal;
-	font-size:14px;
-	line-height:2;
+.footer .footer-center p span {
+  display: block;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
 }
 
-.footer .footer-center p a{
-	color:  white;
-	text-decoration: none;;
+.footer .footer-center p a {
+  color: white;
+  text-decoration: none;
 }
-
-
 
 /* Footer Right */
 
-.footer .footer-right{
-	width: 20%;
+.footer .footer-icons {
+  margin-top: 25px;
+  text-align: center;
 }
 
-.footer .footer-icons{
-	margin-top: 25px;
+.footer .footer-icons a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  cursor: pointer;
+  background-color: #eca41e;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin: 1rem 0.5rem;
+  transition: background-color 0.2s linear;
 }
-
-.footer .footer-icons a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
-	background-color:  #eca41e;
-	border-radius: 2px;
-
-	font-size: 20px;
-	color: #ffffff;
-	text-align: center;
-	line-height: 35px;
-
-	margin-right: 3px;
-	margin-bottom: 3px;
+.footer .footer-icons a:hover {
+  background-color: #035164;
 }
-
 @keyframes mundo {
-0% {
-  transform: rotate(0deg);
-    }
-50% {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
     transform: rotate(180deg);
-}
-100% {
-  transform: rotate(360deg);
-    }
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 /*Tablet*/
 @media (min-width: 576px) {
@@ -314,8 +350,10 @@ main {
     grid-template-rows: auto 0.1fr;
     height: 100vh;
   }
-  
-
+  .company {
+    padding: 2rem 0;
+    font-size: 40px;
+  }
   .nav {
     align-items: start;
     justify-content: center;
@@ -324,20 +362,50 @@ main {
   .navbar-expand-lg .navbar-nav {
     flex-direction: column;
   }
+  .nav-item {
+    margin: 0.4rem 0;
+  }
   .mundo {
     display: block;
   }
   main {
     overflow-y: scroll;
+    padding: 1rem 2rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    margin: 1rem 0;
+    font-size: 1.8rem;
   }
   .cards {
     flex-direction: row;
     flex-wrap: wrap;
- }
+  }
   .flip {
     width: 32%;
   }
-  footer {
+  /*presupuesto*/
+  .ciudades {
     flex-direction: row;
+  }
+  .ciudad {
+    width: 32%;
+  }
+  .footer {
+    flex-direction: row;
+  }
+  .footer .footer-left {
+    width: 40%;
+  }
+  .footer .footer-center {
+    width: 35%;
+  }
+  .footer .footer-right {
+    width: 20%;
+  }
+  .footer .footer-center i {
+    margin: 10px 15px;
   }
 }
