--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,6 @@ body {
   justify-content: flex-start;
   grid-area: nav;
   background-color: #d7f3f7;
-  overflow: hidden;
 }
 
 .company {
@@ -55,8 +54,7 @@ body {
   color: #eca41e;
 }
 
-.navbar .container-fluid,
-.navbar-expand-lg .navbar-nav {
+.navbar .container-fluid {
   flex-direction: row;
 }
 .navbar-toggler {
@@ -357,6 +355,7 @@ ol {
   .nav {
     align-items: start;
     justify-content: center;
+    overflow: hidden;
   }
   .navbar .container-fluid,
   .navbar-expand-lg .navbar-nav {
